--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -5,26 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Promise generator</title>
     <link rel="stylesheet" href="css/common.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <form class="form">
-      <label>
+    <form class="form input-group mb-3">
+      <label class="input-group-text">
         First delay (ms)
-        <input type="number" name="delay" required />
+        <input class="form-control" type="number" name="delay" required />
       </label>
-      <label>
+      <label class="input-group-text">
         Delay step (ms)
-        <input type="number" name="step" required />
+        <input class="form-control" type="number" name="step" required />
       </label>
-      <label>
+      <label class="input-group-text">
         Amount
-        <input type="number" name="amount" required />
-      </label>
-      <button type="submit">Create promises</button>
+        <input class="form-control" type="number" name="amount" required />
+      </label class="input-group-text">
+      <button class="btn btn-primary btn-lg" type="submit">Create promises</button>
     </form>
-
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
     <script src="js/03-promises.js"></script>
   </body>
 </html>
